--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Kafka 🐾</title>
+  <title>Kaio 🐾</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -123,28 +123,28 @@
   <!-- CONTEÚDO DO SITE -->
   <div class="conteudo">
     <div class="card">
-      <h1>🐾 Olá, eu sou o Kafka!</h1>
+      <h1>🐾 Olá, eu sou o Kaio!</h1>
 
-      <img src="https://i.imgur.com/TULHyCN.jpeg" alt="Foto do gato Kafka">
+      <img src="https://i.imgur.com/XzqoWUa.jpeg" alt="Foto do gato Kaio">
 
       <div class="info">
-        <p><strong>Nome:</strong> Kafka</p>
-        <p><strong>Cor:</strong> Laranja 🧡</p>
+        <p><strong>Nome:</strong> Kaio</p>
+        <p><strong>Cor:</strong> Rajadinho </p>
       </div>
 
       <div class="whatsapp">
-        <a href="https://wa.me/5542984219050?text=Oi!%20Encontrei%20o%20Kafka%20e%20escaneei%20o%20QR%20Code."
+        <a href="https://wa.me/5542998641589?text=Oi!%20Encontrei%20o%20Kafka%20e%20escaneei%20o%20QR%20Code."
            target="_blank">
           📲 Enviar mensagem no WhatsApp
         </a>
       </div>
 
       <div class="telefone">
-        📞 Ou ligue: <a href="tel:+5542984219050">(42) 98421-9050</a>
+        📞 Ou ligue: <a href="tel:+5542998641589">(42) 99864-1589</a>
       </div>
 
       <div class="tutor">
-        Tutor: <strong>Lucas Paroski</strong>
+        Tutor: <strong>Emili Izabele Siqueira</strong>
       </div>
 
       <p class="aviso">
@@ -155,7 +155,7 @@
 
   <!-- JAVASCRIPT DOS EMOJIS -->
   <script>
-    const emojis = ["🐾", "🐱", "🧡"];
+    const emojis = ["🐾", "🩶", "🐟"];
 
     function criarEmoji() {
       const emoji = document.createElement("div");
