Update WhatsApp link text in index.html

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       </div>
 
       <div class="whatsapp">
-        <a href="https://wa.me/5542998641589?text=Oi!%20Encontrei%20o%20Kafka%20e%20escaneei%20o%20QR%20Code."
+        <a href="https://wa.me/5542998641589?text=Oi!%20Encontrei%20o%20Kaio%20e%20escaneei%20o%20QR%20Code."
            target="_blank">
           📲 Enviar mensagem no WhatsApp
         </a>
