Change background gradient colors in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       margin: 0;
       padding: 0;
       min-height: 100vh;
-      background: linear-gradient(135deg, #c97a3a, #f2a65a);
+      background: linear-gradient(135deg, #818181, #c1c1c1);
       overflow-x: hidden;
     }
 
